--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PWA React com SQLite</title>
-    <link rel="manifest" href="/manifest.json" />
-</head>
-<body>
+    <title>PDV PWA</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="manifest" href="/pwa-primary/manifest.webmanifest" />
+    <link rel="icon" href="/pwa-primary/favicon.ico" />
+    <link rel="apple-touch-icon" href="/pwa-primary/pwa-192x192.png" />
+    <meta name="theme-color" content="#0f172a" />
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
-</body>
+    
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
